# slowpoke

./: .gitignore  README.md  pyproject.toml
examples/: app.py
slowpoke/: __init__.py  cli.py  config.py  core.py  logger.py
slowpoke.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_config.py  test_core.py  test_logger.py
